Overflow Fix

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ html {
 
 .modiv {
   display: flex;
-  width: 800px;
+  width: 100vw;
   align-items: center;
 }
 
